# EpicFlow

./: CMakeLists.txt  EpicFlowWithDeepMatching.cpp  EpicFlowWithDeepMatching.h  README.md  debug.cpp  debug.h  main.cpp
DeepMatching122/: Makefile  README.txt  conv.cpp  conv.h  hog.cpp  io.cpp  main.cpp  main.h  maxfilter.cpp  maxfilter.h  pixel_desc.h  viz.py
EpicFlow/: CMakeLists.txt  EpicFlowWithDeepMatching.cpp  EpicFlowWithDeepMatching.h
EpicFlow/DeepMatching122/: deep_matching.cpp  deep_matching.h  hog.h  image.cpp  image.h  io.h  main.h  match.txt  pixel_desc.cpp
EpicFlow/EpicFlow100/: epicflow.h  image.h  io.h  solver.c  solver.h  variational.c  variational_aux.c  variational_aux.h
EpicFlow/SED/: SED.h
EpicFlow100/: array_types.h  epic.cpp  epic.h  epicflow.cpp  epicflow.h  image.c  io.c  variational.h
SED/: SED.cpp  SED.h
